fixes bug 237845 "WSDL bindings fail on Mozilla 1.7 beta" patch by keeda@hotpop.com r+sr=bz,jst a=asa